Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62654

Texture loading randomly crashes

XMLWordPrintable

    • 2e4acacfa3a062b8585226500f6cbc65597b8b67

      Calling QTextureImage::setSource crashes randomly. First there is warning 

      [Qt3DRender::GLTexture] No QTextureImageData generated from functor yet, texture will be invalid for this frame

      Then the application crashes. Attached should be modified basicshapes-cpp example to demonstrate the issue. Repeatedly fastly click the check box to change the texture for the ball and quite soon you'll get the crash.

        1. basicshapes-cpp.zip
          1.82 MB
          Mika Salmela
        2. crash.jpg
          26 kB
          Mika Salmela
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mauro.persano Mauro Persano
            misalmel Mika Salmela
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes